--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
-<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
+<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
+   anonymize = @current_user.research %>
 <div data-role="tabs" id="tabs">
   <div data-role="navbar">
     <ul>
@@ -12,7 +13,7 @@
     <h2>Experience Details</h2>
     <p>
       <h3>Name:</h3>
-      <%= @experience.name %>
+      <%= @experience.get_name( anonymize ) %>
       (<% if @experience.active %>
         Active
   <% else %>
@@ -22,7 +23,7 @@
     </p>
     <p>
       <h3>Course:</h3>
-      <%= @experience.course.name %>
+      <%= @experience.course.get_name( anonymize ) %>
     </p>
     <p>
       <h3>Dates:</h3>
@@ -60,9 +61,15 @@
         <tbody>
           <% @experience.course.enrolled_students.each do |student| %>
             <tr><% reaction = @experience.get_user_reaction( student ) %>
-              <td><%= student.last_name.nil? ? "[not given]" : student.last_name %></td>
-              <td><%= student.first_name.nil? ? "[not given]" : student.first_name %></td>
-              <td><%= mail_to student.email %></td>
+              <% if anonymize %>
+                <td><%= student.anon_last_name %></td>
+                <td><%= student.anon_first_name %></td>
+                <td>[email redacted]</td>
+              <% else %>
+                <td><%= student.last_name.nil? ? "[not given]" : student.last_name %></td>
+                <td><%= student.first_name.nil? ? "[not given]" : student.first_name %></td>
+                <td><%= mail_to student.email %></td>
+              <% end %>
               <% if reaction.behavior.present? #completed %>
                 <td>Completed</td>
                 <td><%= reaction.narrative.scenario.behavior.name %></td>
