--- a/app/views/bingo_games/index.html.erb
+++ b/app/views/bingo_games/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-   anonymize = @current_user.research %>
+   anonymize = @current_user.anonymize? %>
 <table data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>" 
