--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @experience do |f| %>
   <%= f.error_notification %>
   <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-     anonymize = @current_user.research %>
+     anonymize = @current_user.anonymize? %>
   <div data-role="tabs" id="tabs">
     <div data-role="navbar">
       <ul>
