--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -1,6 +1,6 @@
 <h1>You've been invited!</h1>
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
-<% anonymize = @current_user.nil? ? false : @current_user.research %>
+<% anonymize = @current_user.nil? ? false : @current_user.anonymize? %>
 <p>Hello <%= @first_name %>,
     <% pluralize = true if @waiting_rosters.count > 1 %>
   You've been added to <%= pluralize ? "courses" : "a course" %>, but sometimes instructors make mistakes, so please do confirm that you are actually enrolled in the <%= @waiting_rosters.count if pluralize %> course<%= "s" if pluralize %> listed below:
