--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -1,5 +1,5 @@
 <h2>Your weekly installment</h2><% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
-<% anonymize = @current_user.research %>
+<% anonymize = @current_user.anonymize? %>
 <% if flash[:notice] %>
   <p class="notice"><%= flash[:notice] %></p>
 <% end %>
