--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-   anonymize = @current_user.research %>
+   anonymize = @current_user.anonymize? %>
 <div data-role="tabs" id="tabs">
   <div data-role="navbar">
     <ul>
