--- a/app/views/graphing/index.html.erb
+++ b/app/views/graphing/index.html.erb
@@ -1,5 +1,6 @@
 <p>Please use the panels below to visualise the data available for your students.</p>
 <% if @current_user.admin %>
+  <% anonymize = @current_user.anonymize? %>
   <div data-role="fieldcontain">
     <label for="for_research" style="align:right">Consenting users only?</label>
     <select name="for_research" id="for_research" data-role="slider" data-mini="true" >
@@ -26,10 +27,10 @@
       </fieldset>
       <fieldset class="ui-grid-b">
         <div class="ui-block-a">
-	<% assessments = @current_users_projects.collect{ |user| [user.name, user.id] }
-	assessments.insert( 0, ["None selected", -1] ) %>
+	<% projects = @current_users_projects.collect{ |project| [project.get_name( anonymize ), project.id] }
+	projects.insert( 0, ["None selected", -1] ) %>
           <%= select_tag :project, 
-            options_for_select( assessments ) ,
+            options_for_select( projects ) ,
             :class => "project_select",
             :data => {:mini => true} %>
         </div>
