Applied some anonymization fixes to support usage and demonstrations.

--- a/app/views/candidate_lists/list_stats.html.erb
+++ b/app/views/candidate_lists/list_stats.html.erb
@@ -1,5 +1,5 @@
   <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-     anonymize = @current_user.anonymize? %>
+     anonymize = false %>
   <table data-role="table"
     id="stats_table"
     data-mode="columntoggle"
