--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @candidate_list do |f| %>
   <%= f.error_notification %>
   <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-     anonymize = @current_user.anonymize? %>
+     anonymize = false %>
   <table>
     <tr>
       <th align="right">Topic:</th>
