--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -1,5 +1,5 @@
   <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-     anonymize = @current_user.anonymize? %>
+     anonymize = false %>
   <table>
     <tr>
       <th align="right">Topic:</th>
