I think I've got an intelligent indicator of duplication built.

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -46,7 +46,8 @@
         class="table-stroke-ui ui-shadow table-stripe table-ui-responsive" >
     <thead>
       <tr>
-        <th width="5%">#</th>
+        <th width="5%" >#</th>
+        <th width="5%" >Possible Duplicate</th>
         <th width="30%">Term</th>
         <th>Definition</th>
       </tr>
@@ -56,6 +57,7 @@
       <%= f.simple_fields_for :candidates do |cf| %>
       <tr>
         <td><%= count += 1 %><%= cf.input :id, as: :hidden %></td>
+        <td><%= cf.object.term == '' ? '' : ( @term_counts[ cf.object.filtered_consistent ] > 1 ? '*' : '' ) %></td>
         <td><%= cf.input :term, label: false %></td>
         <td><%= cf.input :definition, as: :text, label: false %></td>
       </tr>
