--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.informal_name %>!</p>
+<p>Hello <%= @resource.informal_name( false ) %>!</p>
 
 <p>Someone has requested a change to your CoLab password. Follow these steps to do so:
 <ol>
