--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,4 +1,4 @@
-Hello <%= @resource.informal_name %>!
+Hello <%= @resource.informal_name( false ) %>!
 
 Someone has requested a change to your CoLab password. Follow these steps to do so:
 
