--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.informal_name %>!</p>
+<p>Hello <%= @resource.informal_name( false ) %>!</p>
 
 <p>Your <%= link_to 'CoLab', root_url %> account has been locked 
 due to an excessive number of unsuccessful sign in attempts.</p>
