Moved all.each to find_each

--- a/app/views/shared/_behaviors.html.erb
+++ b/app/views/shared/_behaviors.html.erb
@@ -1,5 +1,5 @@
 <dl>
-  <% Behavior.all.each do |b| %>
+  <% Behavior.find_each do |b| %>
   <dt><%= b.name %><dt>
     <dd><%= b.description.html_safe %><dd>
   <% end %>
