--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
+<% theme_code = @current_user.nil? ? false : @current_user.theme.code %>
 <div data-role="tabs" id="tabs">
   <div data-role="navbar">
     <ul>
@@ -127,9 +127,9 @@
         <% if activity.class.name == "BingoGame" && activity.reviewed %>
           <td><%= link_to activity.name, bingo_list_stats_path( activity.candidate_list_for_user( @current_user ) ) %></td>
         <% else %>
-          <td><%= activity.name %></td>
+          <td><%= activity.get_name false %></td>
         <% end %>
-        <td><%= activity.course.name %></td>
+        <td><%= activity.course.pretty_name false %></td>
         <td><%= activity.type %></td>
         <td><%= activity.end_date %></td>
         <td><%= activity.status_for_user( @current_user ) %></td>
