Column select and greeting text -> i18n

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -44,7 +44,7 @@
           data-column-popup-theme="<%= theme_code %>" 
           data-mode="columntoggle"
           data-column-btn-theme="<%= theme_code %>" 
-          data-column-btn-text="Select columns&hellip;"
+          data-column-btn-text="<%= t :column_select %>"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
     <thead>
       <tr>
