--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,11 @@
 <h1>Your Tasks</h1>
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 <% anonymize = @current_user.nil? ? false : @current_user.anonymize? %>
-<p><%= t :greeting, name: @first_name %>,</br>
+<p><%= t 'home.greeting', name: @first_name %>,</br>
   <% task_count = @waiting_student_tasks.count + @waiting_instructor_tasks.count %>
-  <% if task_count > 0 %>
-    <% if task_count == 1 %>
-      You've got one task at the moment.
-  <% else %>
-      You've got <%= task_count %> tasks today.
-  <% end %>
-  <% else %>
-    You do not currently have any tasks due. Check back later or contact your instructor.
-  <% end %></p>
+  <%= t 'home.tasks', count: task_count %></p>
 <% if @waiting_instructor_tasks.any? %>
-<h3>Instructor Tasks</h3>
+<h3><%= t :instructor_tasks %></h3>
   <table data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>" 
@@ -24,11 +16,11 @@
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
     <thead>
       <tr>
-        <th>Task Name</th>
-        <th data-priority="1">Task Type</th>
-        <th data-priority="0">Status</th>
-        <th data-priority="1">Course Name</th>
-        <th data-priority="0">Close Date</th>
+        <th><%= t :task_name %></th>
+        <th data-priority="1"><%= t 'home.task_type' %></th>
+        <th data-priority="0"><%= t :status %></th>
+        <th data-priority="1"><%= t :course_name %></th>
+        <th data-priority="0"><%= t :close_date %></th>
       </tr>
     </thead>
     <tbody>
@@ -46,6 +38,7 @@
 <% end %>
 </br>
 <% if @waiting_student_tasks.any? %>
+<h3><%= t :student_tasks %></h3>
   <table data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>" 
@@ -56,14 +49,14 @@
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
     <thead>
       <tr>
-        <th>Task Name</th>
-        <th data-priority="1">Type</th>
-        <th>Status</th>
-        <th data-priority="1">Group</th>
-        <th data-priority="0">Course Name</th>
-        <th data-priority="1">Open Date</th>
-        <th data-priority="0">Close Date</th>
-        <th data-priority="1">Consent Form</th>
+        <th><%= t :task_name %></th>
+        <th data-priority="1"><%= t 'home.task_type' %></th>
+        <th><%= t :status %></th>
+        <th data-priority="1"><%= t :group %></th>
+        <th data-priority="0"><%= t :course_name %></th>
+        <th data-priority="1"><%= t :open_date %></th>
+        <th data-priority="0"><%= t :close_date %></th>
+        <th data-priority="1"><%= t :consent_form %></th>
       </tr>
     </thead>
     <tbody>
@@ -82,7 +75,7 @@
                 (Project: <%= task.project.get_name( anonymize ) %>)
                   <% end %>
             </td>
-            <td>Self- and Peer-Assessment</td>
+            <td><%= t 'home.sapa' %></td>
             <td>
               <% if(task.is_completed_by_user @current_user) %>
                 <em>completed</em>
