--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -17,30 +17,30 @@
       </div>
     </div>
     <div id="courses" class="ui-body-<%= theme_code %> ui-content">
-      <h2>School Courses</h2>
+      <h2><%= t 'schools.courses' %></h2>
 <p>
   <h3>Courses</h3>
   <% if @school.courses.count < 1 %>
-    No courses.</br>
+    <%= t 'schools.no_courses' %></br>
   <% else %>
     <table data-role="table"
           id="course_table"
           data-mode="columntoggle"
           data-column-btn-theme="<%= theme_code %>"
-          data-column-btn-text="Show/hide columns&hellip;"
+          data-column-btn-text="<%= t :column_select %>"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
       <thead>
       <tr>
         <th>Name</th>
         <th>Number</th>
-        <th data-priority="1">Instructors</th>
-        <th data-priority="0">Students</th>
-        <th data-priority="1">Projects</th>
-        <th data-priority="1">Experiences</th>
-        <th data-priority="1">Terms Lists</th>
-        <th data-priority="0">Start Date</th>
-        <th data-priority="0">End Date</th>
-        <th data-priority="1">Actions</th>
+        <th data-priority="1"><%= t :instructors %></th>
+        <th data-priority="0"><%= t :students %></th>
+        <th data-priority="1"><%= t :projects %></th>
+        <th data-priority="1"><%= t :experiences %></th>
+        <th data-priority="1"><%= t :terms_lists %></th>
+        <th data-priority="0"><%= t :start_date %></th>
+        <th data-priority="0"><%= t :end_date %></th>
+        <th data-priority="1"><%= t :actions %></th>
       </tr>
       </thead>
       <tbody>
@@ -55,16 +55,15 @@
                 <td><%= course.bingo_games.count %></td>
                 <td><%= course.start_date.strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
                 <td><%= course.end_date.strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
-                <td><%= link_to 'Show', game %>&nbsp;|&nbsp;
-                <%= link_to( "Activate", activate_bingo_game_path( game ) ) + raw("&nbsp;|&nbsp;" ) unless game.active %>
-                <%= link_to 'Edit', edit_bingo_game_path(game) %>&nbsp;|&nbsp;
-                <%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= link_to t(:show), course %>&nbsp;|&nbsp;
+                <%= link_to t(:edit), edit_course_path(course) %>&nbsp;|&nbsp;
+                <%= link_to t(:destroy), course, method: :delete, data: { confirm: t(:confirmation) } %></td>
             </tr>
           <% end %>
       </tbody>
     </table>
   <% end %>
-  <%= link_to "New Course", new_course_path( :school_id => @school.id ),
+  <%= link_to t( "courses.new.title"), new_course_path( :school_id => @school.id ),
       :data => { :icon => "plus", :inline => "true",:mini => "true",  :role => "button" }%>
 </p>
 </div>
