--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New School</h1>
+<h1><%= t '.title' %></h1>
 <%= render 'form' %>
-<%= link_to 'Back', schools_path %>
+<%= link_to t(:back), schools_path %>
