--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -66,6 +66,6 @@
   </table>
 
 <div class="form-actions">
-  <%= f.button :submit, "Save" %>
+  <%= f.button :submit, t(:save) %>
 </div>
 <% end %>
