--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -7,16 +7,13 @@
   <p class="error"><%= flash[:error] %></p>
 <% end %>
 <div class="instructions">
-  <p>Please complete this weeks' assessment for 
-group <em><%= @group.get_name( anonymize ) %></em> by indicating how much effort each of the
-    <%= @members.count %> members of your group contributed towards each of
-the <%= @factors.count %> factors. Please keep in mind that <em>this
-report <u>should only cover this past week</u> and none of the period 
-before</em>.</p>
-  <P>Use the sliders to increase or decrease the effort each member put in
-towards each factor. Notice that when you increase one slider, all other
-sliders will automatically drop proportionally and vice versa. Please do
-visit each set of factors prior to submitting your report.</p>
+  <p><%= raw t 'installments.instructions', 
+          group_name: @group.get_name( false ),
+          project_name: @group.project.name( false ),
+          member_count: @members.count,
+          factor_count: @factors.count %></p>
+  <p><%= t raw 'installments.slider.instructions' %></p>
+          
 </div>
 <% if @installment.id.nil?
      url_params = { :action => "create" }
@@ -33,7 +30,7 @@ visit each set of factors prior to submitting your report.</p>
     <% @factors.each do |factor| %>
       <div data-role="collapsible" data-collapsed="true" >
         <h3><%= factor.name %></h3>
-        <p>Description: <%= factor.description %></p>
+        <p><%= t :description %>: <%= factor.description %></p>
         <table width="90%">
           <% @members.each do |member| %>
             <tr>
@@ -65,5 +62,5 @@ visit each set of factors prior to submitting your report.</p>
     <% end %>
   </div>
   <%= render :partial => "installments/shared/comments", :object => f %>
-  <%= f.submit "Submit Weekly Installment" %>
+  <%= f.submit t 'installments.submit' %>
 <% end %>
