--- a/app/views/installments/shared/_comments.erb
+++ b/app/views/installments/shared/_comments.erb
@@ -1,4 +1,4 @@
 <div data-role="collapsible">
-  <h3>Would you like to add additional comments?</h3>
+  <h3><%= t 'installments.comment_prompt' %></h3>
   <%= comments.label :comments %><%= comments.text_area :comments %>
 </div>
