--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -9,7 +9,7 @@
 <div class="instructions">
   <p><%= raw t 'installments.instructions', 
           group_name: @group.get_name( false ),
-          project_name: @group.project.name( false ),
+          project_name: @group.project.get_name( false ),
           member_count: @members.count,
           factor_count: @factors.count %></p>
   <p><%= t raw 'installments.slider.instructions' %></p>
