--- a/app/views/shared/_task_link.erb
+++ b/app/views/shared/_task_link.erb
@@ -1,7 +1,6 @@
-<%
-o_string = ''
-case task.class
-when BingoGame
+<% o_string = ''
+if task.class == BingoGame
+  candidate_list = task.candidate_list_for_user( user )
   if task.awaiting_review?
     o_string = link_to "Review: #{task.get_name( anonymize )}", review_bingo_candidates_path( task )
   elsif task.is_open?
@@ -11,7 +10,7 @@ when BingoGame
   else
     o_string = "BingoGame: #{task.get_name( anonymize )}"
   end
-when Assessment
+elsif task.class == Assessment
   group = task.group_for_user( user )
   if task.is_completed_by_user user
     o_string = link_to group.get_name( anonymize ), edit_installment_path( :assessment_id => task.id, :group_id => group.id )
@@ -19,7 +18,7 @@ when Assessment
     o_string = link_to group.get_name( anonymize ), new_installment_path( :assessment_id => task.id, :group_id => group.id )
   end
   o_string += "<br>(#{t :project }: #{task.project.get_name( anonymize )})"
-when Assessment
+elsif task.class == Experience
   reaction = task.get_user_reaction( user )
   if reaction.behavior.present?
     o_string = task.get_name( anonymize )
@@ -29,6 +28,4 @@ when Assessment
 else
   o_string = "Unhandled object"
 end
-
-o_string
-%>
+%><%= o_string %>
